--- a/game/config
+++ b/game/config
@@ -10,7 +10,7 @@ bootstrap = "snlua bootstrap"	-- The service for bootstrap
 standalone = "0.0.0.0:2013"
 luaservice = root.."service/?.lua;"..root.."test/?.lua;"..root.."game/?.lua;"..root.."lualib/?.lua;"
 lualoader = root .. "lualib/loader.lua"
-lua_path = root.."lualib/?.lua;"..root.."lualib/?/init.lua;"..root.."game/?.lua;"
+lua_path = root.."lualib/?.lua;"..root.."lualib/?/init.lua;"..root.."game/?.lua;"..root.."game/hotfix/?.lua;"
 lua_cpath = root .. "luaclib/?.so"
 -- preload = "./examples/preload.lua"	-- run preload.lua before every lua service run
 snax = root.."game/?.lua;"..root.."test/?.lua"
