--- a/game/config
+++ b/game/config
@@ -8,12 +8,12 @@ master = "127.0.0.1:2013"
 start = "start"	-- main script
 bootstrap = "snlua bootstrap"	-- The service for bootstrap
 standalone = "0.0.0.0:2013"
-luaservice = root.."service/?.lua;"..root.."test/?.lua;"..root.."game/?.lua;"..root.."lualib/?.lua;"
+luaservice = root.."service/?.lua;"..root.."test/?.lua;"..root.."game/?.lua;"..root.."lualib/?.lua;"..root.."game/test/?.lua;"
 lualoader = root .. "lualib/loader.lua"
-lua_path = root.."lualib/?.lua;"..root.."lualib/?/init.lua;"..root.."game/?.lua;"..root.."game/hotfix/?.lua;"
+lua_path = root.."lualib/?.lua;"..root.."lualib/?/init.lua;"..root.."game/?.lua;"..root.."game/test/?.lua;"
 lua_cpath = root .. "luaclib/?.so"
 -- preload = "./examples/preload.lua"	-- run preload.lua before every lua service run
-snax = root.."game/?.lua;"..root.."test/?.lua"
+snax = root.."game/?.lua;"..root.."test/?.lua;"..root.."game/hotfix/?.lua;"..root.."game/test/?.lua;"
 -- snax_interface_g = "snax_g"
 cpath = root.."cservice/?.so"
 -- daemon = "./skynet.pid"
